# simulert

./: README.md  pyproject.toml
.github/workflows/: pytest.yml  pythonpackage.yml  pythonpublish.yml
hooks/: pre-commit
simulert/: __init__.py  alerter.py  cli.py  logger.py
simulert/handlers/: __init__.py  base_handler.py  email.py  logs.py  pushover.py  slack.py
simulert/tests/: conftest.py  test_alerter.py
simulert/tests/unit/: conftest.py  test_alerter.py  test_handler_email.py  test_handler_pushover.py  test_handler_slack.py
tests/: test_simulert.py
