[tool.poetry]
name = "simulert"
version = "0.1.0"
description = "A package to provide useful functionality for sending alerts about running simulations."
authors = ["Jeremy Minton <jeremyminton@gmail.com>"]
license = "Apache 2.0"
homepage = "https://github.com/jjminton/simulert"
repository = "https://github.com/jjminton/simulert"
keywords = ["simulation", "alert", "email"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
slackclient = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
