[tool.poetry]
name = "simulert"
version = "0.2.0"
description = "A package to provide useful functionality for sending alerts about running simulations."
authors = ["Jeremy Minton <jeremyminton@gmail.com>"]
license = "Apache 2.0"
homepage = "https://github.com/jjminton/simulert"
repository = "https://github.com/jjminton/simulert"
readme = "README.md"
keywords = ["simulation", "alert", "email"]
classifiers = [
    "Operating System :: OS Independent",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
poetry = "^1.0"
slackclient = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
